--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <meta name="description" content="Classic Arcade Game Clone">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="http://www.iconj.com/ico/h/e/he0f94mc72.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
