feat: message if game won or lost

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
@@ -8,9 +9,15 @@
     <link rel="shortcut icon" href="http://www.iconj.com/ico/h/e/he0f94mc72.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+
+    <span class="message win animated" id="win">You made it!</span>
+    <span class="message lose animated" id="lose">try again!</span>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
 </body>
+
 </html>
